<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/title" >

        <ImageView
            android:id="@+id/other_download_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:contentDescription="@null"
            android:paddingLeft="10dp"
            android:paddingRight="18dp"
            android:src="@drawable/selector_btn_back" />

        <TextView
            android:id="@+id/other_download_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="其他数据下载"
            android:textColor="@color/white"
            android:textSize="16sp" />

        
    </RelativeLayout>
    
    <CheckBox
        android:id="@+id/other_download_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:clickable="false"
        android:text="@string/clear_database" />
    
    <CheckBox
        android:id="@+id/other_download_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:clickable="false"
        android:text="@string/user_data_download_finish" />
    
    <CheckBox
        android:id="@+id/other_download_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:clickable="false"
        android:text="巡检模板数据下载完成" />
    
    <CheckBox
        android:id="@+id/other_download_well"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:clickable="false"
        android:text="@string/well_data_download_finish" />
    
    <CheckBox
        android:id="@+id/other_download_check_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:clickable="false"
        android:text="@string/check_item_data_download_finish" />
    <CheckBox
        android:id="@+id/other_download_tank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:clickable="false"
        android:text="车辆信息下载完成" />
    
    <TextView
        android:id="@+id/other_download_start"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_btn_blue"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="下载"
        android:textColor="@color/white"
        android:textSize="18sp" />
    

</LinearLayout>
