<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/title">

        <ImageView
                android:id="@+id/history_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:contentDescription="@null"
                android:paddingLeft="10dp"
                android:paddingRight="18dp"
                android:src="@drawable/selector_btn_back"/>

        <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/history_task"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
    </RelativeLayout>

    <!--<include android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--layout="@layout/include_listview"-->
        <!--android:layout_below="@+id/rl1"-->

        <!--/>-->

    <com.joe.oil.view.CommentListView
            android:divider="@null"
            android:id="@+id/history_task"
            android:layout_width="fill_parent"
            android:layout_below="@+id/rl1"
            android:layout_height="fill_parent"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/task_synchronization"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_blue"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/synchronous"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
            android:id="@+id/history_no_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_history_task"
            android:layout_centerInParent="true"
            android:textColor="@color/gray"
            android:textSize="18sp"/>

</RelativeLayout>