<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#e8e8e8"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/title" >

        <ImageView
            android:id="@+id/inspection_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@null"
            android:paddingLeft="10dp"
            android:paddingRight="18dp"
            android:src="@drawable/selector_btn_back" />

        <TextView
            android:id="@+id/inspection_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/station_check"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/inspection_btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@null"
            android:paddingLeft="18dp"
            android:paddingRight="10dp"
            android:src="@drawable/refresh"
            android:visibility="gone" />
        
        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/inspection_inspection"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/inspection"
            android:textColor="@color/blue1"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/inspection_not"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/inspection_tv_not"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/not_inspection"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/inspection_not_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:textColor="@color/red" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/inspection_already"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/inspection_tv_already"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/already_inspection"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/inspection_already_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:textColor="@color/red" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/inspection_exception"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
                android:id="@+id/inspection_tv_exception"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/exception"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/inspection_exception_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:textColor="@color/red" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="3dp" >

        <ImageView
            android:id="@+id/cursor"
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:layout_marginLeft="15dp"
            android:contentDescription="@null"
            android:scaleType="matrix"
            android:src="@color/blue1" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#000000"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</LinearLayout>